# ESP32_WATCH_IOT

./: .gitignore  README.md
Decision_Log/design_concept/: ESP32_WATCH_IOT_diagram.drawio
esp32_watch_iot/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_watch_iot/custom_components/dht11/: CMakeLists.txt  dht11.c  dht11.h
esp32_watch_iot/custom_components/lv_port/: CMakeLists.txt  cst816.c  cst816.h  lv_port.c  lv_port.h
esp32_watch_iot/custom_components/lv_ui/: CMakeLists.txt
esp32_watch_iot/custom_components/lv_ui/font/: GenJyuuGothic_Normal_2.c  lv_font_Acme_Regular_28.c  lv_font_Acme_Regular_53.c  pixel_font.c
esp32_watch_iot/custom_components/lv_ui/img/: chisa.c  mask.c  wallpaper.c
esp32_watch_iot/custom_components/lv_ui/ui/: clock_ui.c  home_ui.c  tileview_ui.c  ui.h  weather_ui.c
esp32_watch_iot/custom_components/lv_ui/ui_driver/: timer_dirver.c  ui_diver.h  weather_driver.c
esp32_watch_iot/custom_components/oneNet/: CMakeLists.txt  example_mqtt.c  mqtt.h
esp32_watch_iot/custom_components/spiffs_manager/: CMakeLists.txt  spiffs_manager.c  spiffs_manager.h
esp32_watch_iot/custom_components/time_manager/: CMakeLists.txt  time_manager.c  time_manager.h
esp32_watch_iot/custom_components/weather/: CMakeLists.txt  weather.c  weather.h  weather_example.c
esp32_watch_iot/custom_components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h  wifi_manager_example.c
esp32_watch_iot/main/: CMakeLists.txt  main.c
